--- a/class12-materials/class12-materials/background-picker/index.html
+++ b/class12-materials/class12-materials/background-picker/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!-- DONE -->
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
@@ -17,9 +19,10 @@
 
 		<h2>Remote</h2>
 		<ul>
-			<li id="purple"></li>
-			<li id="green"></li>
-			<li id="blue"></li>
+			<li id="purple">purple</li>
+			<li id="green">green</li>
+			<li id="blue">blue</li>
+			<li id="hotPink">hotPink</li>
 		</ul>
 
 		<script type="text/javascript" src="js/main.js"></script>
