finishing celsius to fahrenheit conversion

--- a/class13-materials/class13-materials/temperature-converter/index.html
+++ b/class13-materials/class13-materials/temperature-converter/index.html
@@ -4,14 +4,64 @@
     	<meta charset="utf-8">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+		</style>
 
-		<title>Title in the tab</title>
+		<title>Celsius and Fahrenheit </title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<form>
+			<label for="Celsius">Enter Celsius here: </label>
+			<input id="Celsius" type="text" placeholder="Celsius">
+		</form>
+
+		<button id="check" type="button" name="button"> Make the Conversion happen </button>
+
+		<h2 id="placeToYell"> </h2>
+
+		<aside>
+			<p>  References Used: </p>
+			<ul>
+				<li id="link"><a href="https://player.twitch.tv/?enableExtensions=true&muted=false&parent=twitch.tv&player=popout&quality=chunked&t=0h7m4s&video=1306965130&volume=1" target="_blank"> Leon </a></li>
+				<li id="link"><a href="https://developer.mozilla.org/en-US/" target="_blank"> MDN </a></li>
+				<li id="link"> <a href="https://www.javatpoint.com/celsius-to-fahrenheit"target="_blank">javaTpoint</a></li>
+				<li id="link"> <a href="https://www.metric-conversions.org/temperature/celsius-to-fahrenheit.htm"target="_blank"> Metric Conversions.  </a></li>
+				<li id="link"><a href="https://www.thoughtco.com/formula-for-fahrenheit-and-celsius-conversions-2312229"target="_blank"> ThoughtCo </a></li>
+			</ul>
+		</aside>
+		<div id="main">
+			<h1> Celsius To Fahrenheit Conversion </h1>
+			<p>
+				Celsius: <br>
+
+Celsius is the unit to measure the temperature. It is also known as Centigrade. The symbol °C (read as degree Celsius or Centigrade) represents it. <br>
+
+<br>
+Both Centigrade and Celsius are the naming convention. There is no difference between Centigrade and Celsius. The Celsius invented by the Andes Celsius. It is also called Centigrade because the scale defined between 0 to 100 degrees. It is used in most countries.<br>
+
+<br>
+Fahrenheit: <br>
+
+It is also a unit to measure the temperature. It is represented by the symbol °F (read as degree Fahrenheit). The German physicist Daniel Gabriel Fahrenheit suggested the Fahrenheit scale. It is used in the United States.<br>
+<br>
+
+Difference between Celsius and Fahrenheit
+In the Celsius scale, 0°C represents the melting point of the ice, while 100°C represents the boiling point of water. The absolute zero in the Celsius scale is 273.15°C. <br>
+
+<br>
+In the Fahrenheit scale, 32°F represents the melting point of the ice, while 212°F represents the boiling point of water. The absolute zero in the Fahrenheit scale is 459.67°C.
+			</p>
+		</div>
+
+		<footer>
+			<p>FromTheSonOfNone</p>
+
+		</footer>
 		
 
 		<script type="text/javascript" src="js/main.js"></script>
