--- a/class13-materials/class13-materials/bachelor-code/2/index.html
+++ b/class13-materials/class13-materials/bachelor-code/2/index.html
@@ -12,13 +12,18 @@
 		<h2 id="andiNext">Andi</h2>
 		<h2 id="claireNext">Claire</h2>
 		<h2 id="sharleenNext">Sharleen</h2>
+		<h2 id="nikkiNext">Nikki</h2>
+		<h2 id="amyNext">Amy </h2>
 	</section>
 
 
 	<section>
+		<!-- <img src="imgs/Amy.jpeg" alt="The only 1" id="amy" class="hidden"> -->
 		<img id="claire" class="hidden" src="imgs/claire.jpg">
 		<img id="andi" class="hidden" src="imgs/andi.jpg">
 		<img id="sharleen" class="hidden" src="imgs/sharleen.jpg">
+		<img id="nikki" class="hidden" src="imgs/nikki.jpg" >
+		<img id="amy" class="hidden" src="imgs/Amy2.jpg" >
 	</section>
 
 	<script src="js/main.js"></script>
