--- a/class16-materials/class16-solutions/class16-materials/bring-it-on/index.html
+++ b/class16-materials/class16-solutions/class16-materials/bring-it-on/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="3 functions">
+    	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title> Functions 3 </title>
+		<title>Title in the tab</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
+		<img src="img/bring-it-on.jpg" alt="Bring It On Movie DVD Cover">
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
