--- a/class16-materials/class16-solutions/class16-materials/simple-functions/index.html
+++ b/class16-materials/class16-solutions/class16-materials/simple-functions/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="3 functions">
+    	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title> Functions 3 </title>
+		<title>Title in the tab</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
