adding class16 files & class14 finished files

--- a/class14-materials/class14-materials/bring-it-home-practice/index.html
+++ b/class14-materials/class14-materials/bring-it-home-practice/index.html
@@ -5,13 +5,14 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>Working with the basics</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<main><h1> KEEP PLAYING WITH IT !!! </h1></main>
 		
 
 		<script type="text/javascript" src="js/main.js"></script>
