--- a/class16-materials/class16-materials/age-checker/index.html
+++ b/class16-materials/class16-materials/age-checker/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="This is where your description goes">
 	<meta name="keywords" content="one, two, three">
 
-	<title>Title in the tab</title>
+	<title>Age Checker</title>
 
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/normalize.css">
